--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="container">
     <section id="about">
       <div class="profile">
-        <img src="images/fadi.jpg" alt="Fadi Al Machot">
+        <img src="images/fafi.png" alt="Fadi Al Machot">
         <div class="profile-text">
           <h2>About Me</h2>
           <p>
