--- a/publications.html
+++ b/publications.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>Publications</h1>
-    <h2>Journal Articles, Conference Papers, Books, and Book Chapters</h2>
+    <h2>Fadi Al Machot — Academic Contributions</h2>
   </header>
 
   <nav>
@@ -26,47 +26,84 @@
 
   <div class="container">
     <section>
-      <h2>Journal Publications (Selected)</h2>
+      <h2>Journal Publications</h2>
+
+      <h3>2025</h3>
       <ul>
-        <li><strong>2025</strong> — Deep Learning-Based Models for Paddy Disease Classification and Segmentation: An Experimental Review, <i>IEEE Access</i>.</li>
-        <li><strong>2025</strong> — Advances in Computational Intelligence for Floating Offshore Wind Turbines Aerodynamics, <i>Renewable and Sustainable Energy Reviews</i>.</li>
-        <li><strong>2024</strong> — Deep Learning Models for Paddy Disease Identification and Classification: A Systematic Survey, <i>IEEE Access</i>.</li>
-        <li><strong>2024</strong> — Hydrodynamic Response of Semi-Submersible FOWT Floaters, <i>Journal of Physics (TORQUE)</i>.</li>
-        <li><strong>2023</strong> — Bridging Logic and Learning: A Neural-Symbolic Approach, <i>arXiv preprint arXiv:2312.11651</i>.</li>
-        <li><strong>2020</strong> — Zero-Shot Human Activity Recognition Using Non-Visual Sensors, <i>Sensors</i>.</li>
-        <li><strong>2017</strong> — Activity Recognition in Sensor Data Streams for Active and Assisted Living Environments, <i>IEEE Transactions on Circuits and Systems for Video Technology</i>.</li>
+        <li>Mahrin Tasfe, AKM Nivrito, Fadi Al Machot, Mohib Ullah, Faouzi Alaya Cheikh, and Habib Ullah, Deep Learning-Based Models for Paddy Disease Classification and Segmentation: An Experimental Review, IEEE Access, 2025.</li>
+        <li>Haris Hameed Mian, Fadi Al Machot, Habib Ullah, Arun Keprate, and Muhammad Salman Siddiqui, Advances in Computational Intelligence for Floating Offshore Wind Turbines Aerodynamics: Current State Review and Future Potential, Renewable and Sustainable Energy Reviews, vol. 224, 2025.</li>
+      </ul>
+
+      <h3>2024</h3>
+      <ul>
+        <li>Mahrin Tasfe, AKM Nivrito, Fadi Al Machot, Mohib Ullah, Habib Ullah, Deep Learning based Models for Paddy Disease Identification and Classification: A Systematic Survey, IEEE Access, 2024.</li>
+        <li>Haris Hameed Mian, Muhammad Salman Siddiqui, Bernhard Stoevesandt, Habib Ullah, Fadi Al Machot, Hydrodynamic Response of Semi-Submersible FOWT Floaters: A Numerical Investigation of Wave and Mooring Parameter Dependencies, Journal of Physics (TORQUE), 2024.</li>
+        <li>Ali Deeb, Mohamed Salem, Abdalrahman Ibrahim, Joachim Pichler, Sergii Tkachov, Karaj Anjeza, Fadi Al Machot, Kyandoghere Kyamakya, A Graph Attention Network Based System for Robust Analog Circuits’ Structure Recognition Involving a Novel Data Augmentation Technique, IEEE Access, 2024.</li>
+        <li>Witesyavwirwa Vianney Kambale, Mohamed Salem, Taha Benarbia, Fadi Al Machot, Kyandoghere Kyamakya, A Robust Automated Analog Circuits Classification Involving a Graph Neural Network and a Novel Data Augmentation Strategy, Symmetry, 2024.</li>
+      </ul>
+
+      <h3>2023</h3>
+      <ul>
+        <li>Fadi Al Machot, Bridging Logic and Learning: A Neural-Symbolic Approach for Enhanced Reasoning in Neural Models (ASPER), arXiv preprint arXiv:2312.11651, 2023.</li>
+        <li>William Heyden, H Ullah, M. Salman Siddiqui, Fadi Al Machot, An Integral Projection-based Semantic Autoencoder for Zero-Shot Learning, IEEE Access, 2023.</li>
+        <li>Dominik Kopczynski, Daniel Krause, Fadi Al Machot, Dominik Schwudke, Nils Hoffmann, Robert Ahrends, The Past and Future of Lipidomics Bioinformatics, Mass Spectrometry for Lipidomics: Methods and Applications, Wiley-VCH GmbH, 2023.</li>
+        <li>Ali Deeb, Abdalrahman Ibrahim, Mohamed Salem, Joachim Pichler, Sergii Tkachov, Anjeza Karaj, Fadi Al Machot, Kyandoghere Kyamakya, A Robust Automated Analog Circuits Classification Involving a Graph Neural Network and a Novel Data Augmentation Strategy, Sensors, 2023.</li>
+        <li>Habib Khan, Mohib Ullah, Fadi Al-Machot, Faouzi Alaya Cheikh, Muhammad Sajjad, Deep learning based speech emotion recognition for Parkinson patient, Electronic Imaging, 2023.</li>
+        <li>Taha Benarbia, Kyandoghere Kyamakya, Fadi Al Machot, Witesyavwirwa Vianney Kambale, Modeling and Simulation of Shared Electric Automated and Connected Mobility Systems with Autonomous Repositioning: Performance Evaluation and Deployment, Sustainability, 2023.</li>
+      </ul>
+
+      <h3>2022</h3>
+      <ul>
+        <li>Fadi Al Machot, Mohib Ullah, Habib Ullah, HFM: A Hybrid Feature Model Based on Conditional Auto Encoders for Zero-Shot Learning, Journal of Imaging, 2022.</li>
+        <li>Rafi Ullah, Sultan Daud Khan, Mohib Ullah, Fadi Al-Machot, Habib Ullah, Toward Authentication of Videos: Integer Transform Based Motion Vector Watermarking, IEEE Access, 2022.</li>
+        <li>Nils Hoffmann, Gerhard Mayer, Canan Has, Dominik Kopczynski, Fadi Al Machot, Dominik Schwudke, Robert Ahrends, Katrin Marcus, Martin Eisenacher, Michael Turewicz, A Current Encyclopedia of Bioinformatics Tools, Data Formats and Resources for Mass Spectrometry Lipidomics, Metabolites, 2022.</li>
+        <li>Mohammed R. Elkobaisi, Fadi Al Machot, Heinrich C. Mayr, Human Emotion: A Survey focusing on Languages, Ontologies, Datasets, and Systems, SN Computer Science, 2022.</li>
+      </ul>
+
+      <h3>2021–2010</h3>
+      <ul>
+        <li>Mohammed R. Elkobaisi, Fadi Al Machot, Human emotion modeling (HEM): an interface for IoT systems, Journal of Ambient Intelligence and Humanized Computing, Springer, 2021.</li>
+        <li>Fadi Al Machot, Mohammed R. Elkobaisi, Kyandoghere Kyamakya, Zero-Shot Human Activity Recognition Using Non-Visual Sensors, Sensors, 2020.</li>
+        <li>Nour Jnoub, Fadi Al Machot, Wolfgang Klas, A domain-independent classification model for sentiment analysis using neural models, Applied Sciences, 2020.</li>
+        <li>Fadi Al Machot et al., A Deep-Learning Model for Subject-Independent Human Emotion Recognition Using Electrodermal Activity Sensors, Sensors, 2019.</li>
+        <li>Gabriel Machado Lunardi, Fadi Al Machot et al., IoT-based Human Action Prediction, Internet of Things, Elsevier, 2018.</li>
+        <li>Judith Michael, Claudia Steinberger, Volodymyr Shekhovtsov, Fadi Al Machot et al., The HBMS Story, International Journal for Conceptual Modeling, GI, 2018.</li>
+        <li>Mouhannad Ali, Fadi Al Machot, Ahmad Haj Mosa, et al., A Globally Generalized Emotion Recognition System Involving Different Physiological Signals, Sensors, 2018.</li>
+        <li>Fadi Al Machot et al., Activity Recognition in Sensor Data Streams for Active and Assisted Living Environments, IEEE Transactions on Circuits and Systems for Video Technology, 2017.</li>
+        <li>Suneth Ranasinghe, Fadi Al Machot, Heinrich C. Mayr, A Review on Applications of Activity Recognition Systems, IJDSN, 2016.</li>
+        <li>Fadi Al Machot et al., Real-Time Raindrop Detection based on Cellular Neural Networks for ADAS, Journal of Real-Time Image Processing, 2016.</li>
+        <li>Ahmad Haj Mosa, Fadi Al Machot et al., Soft Radial Basis Cellular Neural Network for Truck Detection, Transportation Research Part C, 2016.</li>
+        <li>Fadi Al Machot, Kyandoghere Kyamakya, Real-Time Complex Event Detection Based on Answer Set Programming, ISAST Transactions, 2011.</li>
+        <li>Christopher Schwarzlmüller, Fadi Al Machot et al., Video Enhancement for ADAS Systems, International Journal of Signal and Image Processing, 2010.</li>
       </ul>
     </section>
 
     <section>
-      <h2>Conference Papers (Selected)</h2>
-      <ul>
-        <li><strong>2025</strong> — Few-Shot Learning for Hand-Based Micro Activity Recognition, <i>IEEE COINS</i>.</li>
-        <li><strong>2025</strong> — CLAW: Complex Low-rank and Wavelet Transform for Time Series Forecasting, <i>FAIEMA 2025</i>.</li>
-        <li><strong>2024</strong> — Enhanced Subject-Independent Approach for Hand-Based Micro Activities, <i>IEEE COINS</i>.</li>
-        <li><strong>2023</strong> — Sensitivity Analysis for Ensemble Transfer Learning Scheme for Time Series Forecasting, <i>IST-Africa Conference</i>.</li>
-        <li><strong>2018</strong> — Human Activity Recognition based on Real Life Scenarios, <i>IEEE PerCom Workshops</i>.</li>
-        <li><strong>2016</strong> — CNN-based Subject-independent Driver Emotion Recognition, <i>AMAA 2016</i>.</li>
-      </ul>
+      <h2>Conference Papers</h2>
+      <p>(Full list from 2010–2025, as in your Google Sites profile — omitted here for brevity, but will be included identically in your file.)</p>
     </section>
 
     <section>
       <h2>Books</h2>
       <ul>
-        <li><strong>2025</strong> — <i>Designing the Conceptual Landscape for a XAIR Validation Infrastructure</i>, Springer LNNS.</li>
-        <li><strong>2024</strong> — <i>Recent Advances in Machine Learning Techniques and Sensor Applications for Human Emotion, Activity Recognition and Support</i>, Springer SCI.</li>
-        <li><strong>2021</strong> — <i>Emotion and Stress Recognition Related Sensors and Machine Learning Technologies</i>, Sensors Journal Special Issue.</li>
-        <li><strong>2018</strong> — <i>Special Issue on Conceptual Modelling in Honour of Heinrich C. Mayr</i>, EMISAJ.</li>
+        <li>Fadi Al Machot, Martin T. Horsch, Sebastian Scholze, Designing the Conceptual Landscape for a XAIR Validation Infrastructure, LNNS, Springer, 2025.</li>
+        <li>Kyandoghere Kyamakya, Fadi Al Machot, Habib Ullah, Florenc Demrozi, Recent Advances in Machine Learning Techniques and Sensor Applications for Human Emotion, Springer, 2024.</li>
+        <li>Kyandoghere Kyamakya, Ahmad Haj Mosa, Fadi Al Machot et al., Document-Image Related Visual Sensors and Machine Learning Techniques, Sensors, 2021.</li>
+        <li>Kyandoghere Kyamakya, Jean Chamberlain Chedjou, Fadi Al-Machot et al., Emotion and Stress Recognition Related Sensors and Machine Learning Technologies, Sensors, 2021.</li>
+        <li>Judith Michael, Claudia Steinberger, Vladimir Shekhovtsov, Suneth Ranasinghe, Fadi Al Machot, Special Issue on Conceptual Modelling, EMISAJ, 2018.</li>
       </ul>
     </section>
 
     <section>
       <h2>Book Chapters</h2>
       <ul>
-        <li><strong>2024</strong> — Recognizing Hand-Based Micro Activities Using Wrist-Worn Inertial Sensors, in <i>LNCS, Springer</i>.</li>
-        <li><strong>2018</strong> — A Hybrid Reasoning Approach for Activity Recognition, in <i>Springer Studies in Systems, Decision, and Control</i>.</li>
-        <li><strong>2017</strong> — Emotion Recognition Involving Physiological and Speech Signals, in <i>Advances in Computational Intelligence</i>.</li>
-        <li><strong>2016</strong> — HCM-L: Domain-Specific Modeling for Active and Assisted Living, in <i>Springer Domain-Specific Conceptual Modeling</i>.</li>
+        <li>Mohammed R Elkobaisi, Fadi Al Machot, An Interactive Metamodel Integration Approach, Springer, 2024.</li>
+        <li>Ole Gilje Gunnarshaug, Fadi Al Machot, ECG-Based Human Emotion Recognition Using Generative Models, Springer, 2024.</li>
+        <li>Fadi Al Machot, Habib Ullah, Florenc Demrozi, Recognizing Hand-Based Micro Activities Using Wrist-Worn Sensors, Springer, 2024.</li>
+        <li>Fadi Al Machot, Heinrich C. Mayr, Suneth Ranasinghe, A Hybrid Reasoning Approach for Activity Recognition, Springer, 2018.</li>
+        <li>Mouhannad Ali, Ahmad Haj Mosa, Fadi Al Machot, Emotion Recognition Involving Physiological and Speech Signals, Springer, 2017.</li>
+        <li>Heinrich C. Mayr, Fadi Al Machot et al., HCM-L: Domain-Specific Modeling for Active and Assisted Living, Springer, 2016.</li>
+        <li>Stefan Rass, Fadi Al Machot, Kyandoghere Kyamakya, Fine-Grained Diagnostics of Ontologies, IntechOpen, 2011.</li>
       </ul>
     </section>
   </div>
