--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section id="news">
       <h2>News & Updates</h2>
       <ul>
-        <li><strong>25 Jul 2025:</strong> Review published in <i>Renewable and Sustainable Energy Reviews</i>: <a href="https://lnkd.in/dVjvuuUe" target="_blank">Advances in Computational Intelligence for Floating Offshore Wind Turbines</a>.</li>
+        <li><strong>25 Jul 2025:</strong> Review published in <i>Renewable and Sustainable Energy Reviews</i>: <a target="_blank">Advances in Computational Intelligence for Floating Offshore Wind Turbines</a>.</li>
         <li><strong>12 Jun 2025:</strong> Norway’s Billion-Kroner AI Initiative: Funding for the Norwegian Centre on AI for Decisions (AID).</li>
         <li><strong>31 Mar 2025:</strong> Panel Convenor at NorDev25 (NMBU): “AI and Sustainable Development.”</li>
         <li><strong>01 Jan 2025:</strong> Paper accepted at WACV 2025 Workshop: “SEER-ZSL.”</li>
