--- a/publications.html
+++ b/publications.html
@@ -78,8 +78,82 @@
       </ul>
     </section>
 
-    <section>
+<section>
       <h2>Conference Papers</h2>
+
+      <h3>2025</h3>
+      <ul>
+        <li>Florenc Demrozi and Fadi Al Machot, Few-Shot Learning for Hand-Based Micro Activity Recognition, in <i>2025 IEEE International Conference on Omni-layer Intelligent Systems (COINS)</i>, IEEE, 2025.</li>
+        <li>Aditya Dey, Jonas Kusch, and Fadi Al Machot, CLAW: Complex Low-rank and Wavelet Transform for Univariate Long-term Time Series Forecasting, in <i>Proceedings of the 3rd International Conference on Frontiers of Artificial Intelligence, Ethics, and Multidisciplinary Applications (FAIEMA 2025)</i>, 2025.</li>
+        <li>Aditya Dey, Jonas Kusch, and Fadi Al Machot, HADL: A Haar-DCT and Low-Rank Framework for Noise-Resilient Long-Term Time Series Forecasting, in <i>Proceedings of the International Conference on Time Series and Forecasting (ITISE 2025)</i>, 2025.</li>
+        <li>Liyanapathiranage S. W. S. Samarathunga, Aditya Dey, Martin Thomas Horsch, and Fadi Al Machot, Lightweight and Resource-Efficient Battery Degradation Prediction Using Teacher-Informed Cellular Neural Networks (TICeNN), in <i>Proceedings of the 3rd International Conference on Frontiers of Artificial Intelligence, Ethics, and Multidisciplinary Applications (FAIEMA 2025)</i>, 2025.</li>
+        <li>William Heyden, Habib Ullah, Muhammad Salman Siddiqui, and Fadi Al Machot, SEER-ZSL: Semantic Encoder-Enhanced Representations for Generalized Zero-Shot Learning, in <i>Proceedings of the Winter Conference on Applications of Computer Vision (WACV)</i>, USA, 2025.</li>
+      </ul>
+
+      <h3>2024</h3>
+      <ul>
+        <li>Florenc Demrozi, and Fadi Al Machot, An Enhanced Subject-Independent Approach for Hand-Based Micro Activities Recognition, in <i>2024 IEEE International Conference on Omni-layer Intelligent Systems (COINS)</i>, London, 2024.</li>
+        <li>Hussein Ahmad Ahmad, Seyyed Kasra Mortazavi, Mohamed El Bahnasawi, Fadi Al Machot, Witesyavwirwa Vianney Kambale, and Kyandoghere Kyamakya, Enhanced Time Series Forecasting: Integrating PatchTST with BERT Layers, in <i>IEEE International Conference on Applied Mathematics & Computer Science (ICAMCS)</i>, 2024.</li>
+        <li>Fadi Al Machot, Bridging Logic and Learning: A Neural-Symbolic Approach for Enhanced Reasoning in Neural Models (ASPER), in <i>DCLXVI International Workshop</i>, Kaiserslautern, Germany, 2024.</li>
+        <li>Fadi Al Machot, Martin Thomas Horsch, and Habib Ullah, Building Trustworthy AI: Transparent AI Systems Via Large Language Models, Ontologies, and Logical Reasoning (TRANSPNET), in <i>DCLXVI International Workshop</i>, Kaiserslautern, Germany, 2024.</li>
+        <li>Fadi Al Machot, Martin Thomas Horsch, and Habib Ullah, Symbolic-AI-Fusion Deep Learning (SAIF-DL): Encoding Knowledge into Training with Answer Set Programming Loss Penalties, in <i>DCLXVI International Workshop</i>, Kaiserslautern, Germany, 2024.</li>
+        <li>Muhammad Uzair, Zohaib Jan, Sultan Daud Khan, Fadi Al Machot, and Habib Ullah, Towards Explainable Ensemble Learning: Adaptive Feature Space Pruning and Optimized Classifier Selection, in <i>DCLXVI International Workshop</i>, Kaiserslautern, Germany, 2024.</li>
+        <li>Abdullah Waqas, Sultan Daud Khan, Zaib Ullah, Fadi Al Machot, and Habib Ullah, Benchmarking Deep Learning Models for Explainable IoT Intrusion Detection on Diverse Datasets, in <i>DCLXVI International Workshop</i>, Kaiserslautern, Germany, 2024.</li>
+        <li>Martin Thomas Horsch, Fadi Al Machot, and Jadran Vrabec, Scope of Physics-Based Simulation Artefacts, in <i>DCLXVI International Workshop</i>, Kaiserslautern, Germany, 2024.</li>
+        <li>MT Horsch, S Chiacchiera, IT Todorov, AT Correia, A Dey, NA Konchakova, S Scholze, S Stephan, K Tøndel, and A Sarkar, Exploration of Core Concepts Required for Mid- and Domain-Level Ontology Development to Facilitate Explainable-AI-Readiness of Data and Models, in <i>ECAI 2024 Workshop on Data Meets Applied Ontologies in Explainable AI (DAO-XAI)</i>, Spain, 2024.</li>
+        <li>MT Horsch, D Romanov, E Valseth, S Belouettar, LE Córdova López, J Glutting, MA Janssen, P Klein, A Linhart, and MA Seaton, Battery Manufacturing Knowledge Infrastructure Requirements for Multicriteria Optimization-Based Decision Support, in <i>International Workshop on Semantic Materials Science (SeMatS 2024)</i>, Amsterdam, Netherlands, 2024.</li>
+      </ul>
+
+      <h3>2023</h3>
+      <ul>
+        <li>Witesyavwirwa Vianney Kambale, Kyandoghere Kyamakya, Fadi Al Machot, and Taha Benarbia, Sensitivity Analysis for an Ensemble Transfer Learning Scheme for Time Series Forecasting – Case Study of a Shallow Neural Network Architecture, in <i>2023 IST-Africa Conference</i>, Tshwane, South Africa, 2023.</li>
+      </ul>
+
+      <h3>2018</h3>
+      <ul>
+        <li>Gabriel M. Lunardi, Guilherme M. Machado, Fadi Al Machot, Vinícius Maran, Alencar Machado, Heinrich Mayr, Vladimir Shekhovtsov, and José Palazzo, Probabilistic Ontology Reasoning in Ambient Assistance: Predicting Human Actions, in <i>32nd International Conference on Advanced Information Networking and Applications</i>, 2018.</li>
+        <li>Fadi Al Machot, Mouhannad Ali, Suneth Ranasinghe, Ahmad Haj Mosa, and Kyandoghere Kyamakya, Improving Subject-Independent Human Emotion Recognition Using Electrodermal Activity Sensors for Active and Assisted Living, in <i>11th ACM International Conference on Pervasive Technologies Related to Assistive Environments (PETRA)</i>, 2018.</li>
+        <li>Fadi Al Machot, Suneth Ranasinghe, Johanna Plattner, and Nour Jnoub, Human Activity Recognition Based on Real Life Scenarios, in <i>IEEE International Conference on Pervasive Computing and Communications (PerCom) — CoMoRea Workshop</i>, 2018.</li>
+      </ul>
+
+      <h3>2016</h3>
+      <ul>
+        <li>Fadi Al Machot, Heinrich C. Mayr, and Suneth Ranasinghe, A Windowing Approach for Activity Recognition in Sensor Data Streams, in <i>Proc. 8th IEEE Int. Conf. on Ubiquitous and Future Networks (ICUFN)</i>, Vienna, 2016.</li>
+        <li>Mouhannad Ali, Fadi Al Machot, Ahmad Haj Mosa, and Kyandoghere Kyamakya, CNN-Based Subject-Independent Driver Emotion Recognition System Involving Physiological Signals for ADAS, in <i>20th International Forum on Advanced Microsystems for Automotive Applications (AMAA)</i>, 2016.</li>
+        <li>Mouhannad Ali, Ahmad Haj Mosa, Fadi Al Machot, and Kyandoghere Kyamakya, EEG-Based Emotion Recognition Approach for E-Healthcare Applications, in <i>Proc. 8th IEEE Int. Conf. on Ubiquitous and Future Networks (ICUFN)</i>, Vienna, 2016.</li>
+        <li>Fadi Al Machot, and Heinrich C. Mayr, Improving Human Activity Recognition by Smart Windowing and Spatio-Temporal Feature Analysis, in <i>Proc. 9th ACM Int. Conf. on Pervasive Technologies Related to Assistive Environments (PETRA)</i>, 2016.</li>
+        <li>Mouhannad Ali, Fadi Al Machot, Ahmad Haj Mosa, and Kyandoghere Kyamakya, A Novel EEG-Based Emotion Recognition Approach for E-Healthcare Applications, in <i>Proceedings of the 31st Annual ACM Symposium on Applied Computing</i>, 2016.</li>
+      </ul>
+
+      <h3>2015</h3>
+      <ul>
+        <li>Judith Michael, Fadi Al Machot, and Heinrich C. Mayr, ADOxx-Based Tool Support for a Behavior-Centered Modeling Approach, in <i>Proc. 8th ACM Int. Conf. on Pervasive Technologies Related to Assistive Environments (PETRA)</i>, 2015.</li>
+        <li>Ahmad Haj Mosa, Kyandoghere Kyamakya, Mouhannad Ali, Fadi Al Machot, and Jean Chamberlain Chedjou, Neurocomputing-Based Matrix Inversion Involving Cellular Neural Networks: Blackbox Training Concept, in <i>Autonomous Systems</i>, 2015.</li>
+      </ul>
+
+      <h3>2014</h3>
+      <ul>
+        <li>Fadi Al Machot, Heinrich C. Mayr, and Judith Michael, Behavior Modeling and Reasoning for Ambient Support: HCM-L Modeler, in <i>Modern Advances in Applied Intelligence — Proc. 27th Int. Conf. on Industrial, Engineering and Other Applications of Applied Intelligent Systems</i>, Springer LNAI Vol. 8482, 2014.</li>
+        <li>Judith Michael, Fadi Al Machot, and Heinrich C. Mayr, A Behavior-Centered Modeling Tool Based on ADOxx, in <i>Joint Proceedings of the CAiSE Forum and Doctoral Consortium</i>, CEUR Workshop Proceedings, 2014.</li>
+        <li>Mouhannad Ali, Fadi Al Machot, Ahmad Haj Mosa, Patrik Grausberg, Nkiediel Alain Akwir, Baraka Olivier Mushage, and Kyandoghere Kyamakya, A Review of Object Classification for Video Surveillance Systems, in <i>Proc. 7th GI Workshop on Autonomous Systems</i>, 2014.</li>
+        <li>Ahmad Haj Mosa, Mouhannad Ali, Fadi Al Machot, and Kyandoghere Kyamakya, A Computerized Method to Diagnose Strabismus, in <i>Proc. 7th GI Workshop on Autonomous Systems</i>, Düsseldorf, 2014.</li>
+      </ul>
+
+      <h3>2011</h3>
+      <ul>
+        <li>Fadi Al Machot, Kyandoghere Kyamakya, Bernhard Dieber, and Bernhard Rinner, Real-Time Complex Event Detection for Resource-Limited Multimedia Sensor Networks, in <i>Proc. 8th IEEE Int. Conf. on Advanced Video and Signal-Based Surveillance (AVSS)</i>, 2011.</li>
+        <li>Fadi Al Machot, C. Tasso, Bernhard Dieber, Kyandoghere Kyamakya, Claudio Piciarelli, Christian Micheloni, S. Londero, M. Valotto, P. Omero, and Bernhard Rinner, Smart Resource-Aware Multimedia Sensor Network for Automatic Detection of Complex Events, in <i>Proc. 8th IEEE Int. Conf. on Advanced Video and Signal-Based Surveillance (AVSS)</i>, 2011.</li>
+        <li>Fadi Al Machot, Ahmad Haj Mosa, Kosai Dabbour, Alireza Fasih, and Christopher Schwarzlmüller, A Novel Real-Time Emotion Detection System from Audio Streams Based on Bayesian Quadratic Discriminate Classifier for ADAS, in <i>Proceedings of the Joint INDS'11 & ISTET'11</i>, Aachen, 2011.</li>
+        <li>Christopher Schwarzlmüller, Fadi Al Machot, Kyandoghere Kyamakya, and Alireza Fasih, Adaptive Contrast Enhancement Involving CNN-Based Processing for Foggy Weather and Non-Uniform Lighting Conditions, in <i>Proc. Joint INDS'11 & ISTET'11</i>, 2011.</li>
+        <li>Sasanka Potluri, Alireza Fasih, L.K. Vutukuru, Fadi Al Machot, and Kyandoghere Kyamakya, CNN-Based High-Performance Computing for Real-Time Image Processing on GPU, in <i>Proc. Joint INDS'11 & ISTET'11</i>, 2011.</li>
+        <li>A. Kolli, Alireza Fasih, Fadi Al Machot, and Kyandoghere Kyamakya, Non-Intrusive Car Driver's Emotion Recognition Using Thermal Camera, in <i>Proc. Joint INDS'11 & ISTET'11</i>, 2011.</li>
+        <li>Fadi Al Machot, and Kyandoghere Kyamakya, Decision Support Systems Based on Answer Set Programming, in <i>Lasko Workshop 2011 - Autonomous Systems</i>, University of Maribor, 2011.</li>
+      </ul>
+
+      <h3>2010</h3>
+      <ul>
+        <li>Robert Hartmann, Fadi Al Machot, Philipp Mahr, and Christopher Bobda, Camera-Based System for Tracking and Position Estimation of Humans, in <i>IEEE Conference on Design & Architectures for Signal & Image Processing (DASIP)</i>, Edinburgh University Press, 2010.</li>
+      </ul>
     </section>
 
     <section>
